<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/explore_recipes"
            android:icon="@drawable/search"
            android:title="@string/explore_recipes" />
        <item
            android:id="@+id/favourite_recipes"
            android:icon="@drawable/favourite_outline"
            android:title="@string/favourite_recipes" />
        <item
            android:id="@+id/my_profile"
            android:icon="@drawable/profile_outline"
            android:title="@string/profile" />
    </group>



    <group
        android:id="@+id/group2">
        <item
            android:id="@+id/sign_out"
            android:title="@string/sign_out" />

    </group>

</menu>