<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserInterface.AuthenticationFragments.Login">


    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:fontFamily="@font/sanista"
        android:textSize="40sp"
        android:textColor="@color/primary_dark"
        android:paddingVertical="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:startIconDrawable="@drawable/email"
        app:startIconContentDescription="@string/email_icon_description"
        android:hint="@string/email"
        android:background="@drawable/input_shape"
        style="@style/TextInputStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="janaysander1712@gmail.com"
            style="@style/TextInputStyle"
            android:textSize="18sp">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_email_layout"
        app:startIconDrawable="@drawable/password"
        app:startIconContentDescription="@string/password_icon_description"
        android:hint="@string/password"
        android:background="@drawable/input_shape"
        style="@style/TextInputStyle"
        android:layout_marginVertical="10dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputStyle"
            android:textSize="18sp"
            android:text="test1234"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_password_layout"
        android:text="@string/login_button_text"
        style="@style/OutlinedButton"
        android:background="@drawable/button_border"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/primary_dark"
        android:fontFamily="@font/sanista"
        android:layout_marginVertical="30dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        android:text="@string/signup_button_text"
        style="@style/OutlinedButton"
        android:background="@drawable/button_border"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>