<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserInterface.AuthenticationFragments.SignUp">

    <LinearLayout
        android:id="@+id/signup_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/signup_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/back_button"
            android:minWidth="30dp"
            android:minHeight="30dp"/>

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign up"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:fontFamily="@font/sanista"
            android:textSize="40sp"
            android:textColor="@color/primary_dark"
            android:paddingVertical="20dp"
            android:layout_marginRight="80dp"/>
    </LinearLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signup_titlebar"
        app:startIconDrawable="@drawable/email"
        app:startIconContentDescription="@string/email_icon_description"
        android:hint="@string/email"
        android:background="@drawable/input_shape"
        style="@style/TextInputStyle"
        app:errorEnabled="true"
        app:errorIconTint="@color/secondary_light"
        app:errorTextColor="@color/secondary_light">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputStyle">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signup_email_layout"
        app:startIconDrawable="@drawable/password"
        app:startIconContentDescription="@string/password_icon_description"
        android:hint="@string/password"
        android:background="@drawable/input_shape"
        style="@style/TextInputStyle"
        android:layout_marginVertical="10dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorIconTint="@color/secondary_light"
        app:errorTextColor="@color/secondary_light">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputStyle"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_confirm_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signup_password_layout"
        app:startIconDrawable="@drawable/password"
        app:startIconContentDescription="@string/password_icon_description"
        android:hint="@string/confirm_password"
        android:background="@drawable/input_shape"
        style="@style/TextInputStyle"
        android:layout_marginVertical="10dp"
        app:errorEnabled="true"
        app:errorIconTint="@color/secondary_light"
        app:errorTextColor="@color/secondary_light">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputStyle"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/spacer_signup"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password_layout"/>

    <Button
        android:id="@+id/signup_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spacer_signup"
        android:text="@string/signup_button_text"
        style="@style/OutlinedButton"
        android:background="@drawable/button_border"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_confirm_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>