<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".UserInterface.ProfileFragments.ProfileMyDetails">

    <ImageView
        android:id="@+id/profile_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:minHeight="100dp"
        android:minWidth="100dp"
        android:src="@drawable/person_circle"
        app:tint="@color/primary_dark" />

    <ImageView
        android:id="@+id/undo_my_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/profile_circle"
        android:src="@drawable/undo"
        android:minHeight="40dp"
        android:minWidth="40dp"
        app:tint="@color/primary_dark"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:id="@+id/optional_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/profile_circle"
        android:background="@drawable/button_border"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        android:gravity="center"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/optional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/profile_heading"
            android:text="@string/optional_info"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/weight_layout"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight"
                    android:background="@drawable/input_shape"
                    style="@style/TextInputStyle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextInputStyle"
                        android:inputType="numberDecimal">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/profile_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Kilogram"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/weight_layout"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/height_layout"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/height"
                    android:background="@drawable/input_shape"
                    style="@style/TextInputStyle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextInputStyle"
                        android:inputType="numberDecimal">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/profile_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Metres"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/height_layout"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="10dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/optional_layout"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_border"
        android:paddingVertical="10dp"
        android:paddingHorizontal="10dp"
        android:gravity="center"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/sign_in_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/profile_heading"
            android:text="@string/sign_in_heading"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sign_in_data"
            app:startIconDrawable="@drawable/password"
            app:startIconContentDescription="@string/password_icon_description"
            android:hint="@string/password"
            android:background="@drawable/input_shape"
            style="@style/TextInputStyle"
            android:layout_marginVertical="10dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputStyle"
                android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/profile_password_layout"
            app:startIconDrawable="@drawable/password"
            app:startIconContentDescription="@string/password_icon_description"
            android:hint="@string/confirm_password"
            android:background="@drawable/input_shape"
            style="@style/TextInputStyle"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputStyle"
                android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>