<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserInterface.MainComponents.ExploreRecipes">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_text_layout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/search"
        app:startIconContentDescription="@string/search_icon_description"
        android:hint="@string/search"
        android:background="@drawable/button_border"
        style="@style/SearchInputStyle"
        android:layout_marginVertical="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_text"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="4dp"
            android:scrollHorizontally="true"
            android:lines="1"
            android:ellipsize="end"
            style="@style/SearchInputStyle">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/based_on_preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_text_layout"
        android:text="@string/preferences"
        android:fontFamily="@font/sanista"
        android:textSize="18sp"
        android:textColor="@color/primary_dark"
        android:textAlignment="center"
        android:layout_marginHorizontal="40dp"
        android:buttonTint="@color/primary_dark"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_recipes"
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/based_on_preferences"
        app:layout_constraintBottom_toTopOf="@id/page_layout">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/page_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <ImageView
            android:id="@+id/previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/previous"
            style="@style/back_button"/>

        <TextView
            android:id="@+id/page_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Page 2"
            android:fontFamily="@font/sanista"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/primary_dark"
            android:layout_marginVertical="25dp"
            android:layout_marginHorizontal="50dp"/>

        <ImageView
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/next"
            style="@style/back_button"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>